added link and hopefully colour pray for me lads

--- a/index.html
+++ b/index.html
@@ -2,3 +2,6 @@
 <h1 style="color:blue"> Kak dela </h1>
 
 <p> I don't know </p>
+
+<a style="color:pink" href="bootstrap.html"> Using bootstrap example </a>
+
