--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="jumbotron">
           <h1 class="display-3">Jumbotron heading</h1>
-          <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p class="lead">I like big fat butts and I cannot lie.</p>
           <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
         </div>
 
